--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,4 @@
-<stn-product (priceChange)="onPriceChange($event)" [product]="productParent"/>
+<stn-product (priceChange)="onPriceChange($event)" [product]="productParent">
+    <input type="number" #price />
+    <button (click)="onPriceChange(price.valueAsNumber)">Preis ändern</button>
+</stn-product>
