--- a/src/app/product/product.html
+++ b/src/app/product/product.html
@@ -1,7 +1,8 @@
 <ul>
     <li> ID: {{product().id}}</li>
     <li id="name"> Name: {{product().name}}</li>
-    <li> Preis: {{product().price}}</li>
+    <li> Preis: {{product().price}} </li>
     <li> Gewicht: {{product().weight}}</li>
 </ul>
+<ng-content/>
 <button (click)="increasePrice()">Preis erhöhen</button>
