--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
-<stn-product (priceChange)="onPriceChange($event)" [product]="productParent">
-    <input type="number" #price />
-    <button (click)="changePrice(price.valueAsNumber)">Preis ändern</button>
-</stn-product>
+@for(prod of products; track prod.id; let isEven = $even){
+    <div [ngClass]="{'even-style': isEven}">
+        <stn-product [product]="prod"  (priceChange)="onPriceChange($event)"></stn-product>
+    </div>
+}
