--- a/src/app/product/product.html
+++ b/src/app/product/product.html
@@ -1,8 +1,19 @@
-<ul>
-    <li> ID: {{product().id}}</li>
-    <li id="name"> Name: {{product().name}}</li>
-    <li> Preis: {{product().price}} </li>
-    <li> Gewicht: {{product().weight}}</li>
-</ul>
-<ng-content/>
-<button (click)="increasePrice()">Preis erhöhen</button>
+<div 
+    class="border" 
+    [ngStyle]="styleConfig" 
+    [ngClass]="{'border-green' : product().price < 50}"
+>
+    <ul>
+        <li> ID: {{product().id}}</li>
+        <li id="name"> Name: {{product().name}}</li>
+        @if(showPrice){
+        <li> <strong>Preis: </strong>{{product().price}}</li>
+        }
+        <li> Gewicht: {{product().weight}}</li>
+    </ul>
+    <ng-content/>
+    <input type="number" #price>
+    <button (click)="changePrice(price.valueAsNumber)">Preis verändern</button>
+    <button (click)="togglePrice()">Preis Einblenden/Ausblenden</button>
+    <button (click)="increasePrice()">Preis erhöhen</button>
+</div>
