--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
-@for(prod of products; track prod.id; let isEven = $even){
+<span> Heute ist {{heute | date: "fullDate" | uppercase}}</span>
+@for(prod of products | slice:0:3; track prod.id; let isEven = $even){
     <div [ngClass]="{'even-style': isEven}">
         <stn-product [product]="prod"  (priceChange)="onPriceChange($event)"></stn-product>
     </div>
