--- a/src/app/product/product.html
+++ b/src/app/product/product.html
@@ -15,8 +15,11 @@
         <li> Gewicht: {{product().weight}}</li>
     </ul>
     <ng-content/>
-    <input type="number" #price>
-    <button (click)="changePrice(price.valueAsNumber)">Preis verändern</button>
-    <button (click)="togglePrice()">Preis Einblenden/Ausblenden</button>
-    <button (click)="increasePrice()">Preis erhöhen</button>
+     <button mat-raised-button (click)="togglePrice()">Preis ein-/ausblenden</button>
+     <button mat-raised-button (click)="increasePrice()">Preis erhöhen</button>
+     <br/>
+     <mat-form-field>
+         <input matInput type="number" #price>
+     </mat-form-field>
+     <button mat-raised-button (click)="changePrice(price.valueAsNumber)"> Preis ändern</button> <br/>
 </div>
