--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,9 @@
+<mat-toolbar>
+    <span> Stones </span>
+</mat-toolbar>
 <span> Heute ist {{heute | date: "fullDate" | uppercase}}</span>
 @for(prod of products | slice:0:3; track prod.id; let isEven = $even){
-    <div [ngClass]="{'even-style': isEven}">
+    <mat-card  [ngClass]="{'even-style': isEven}">
         <stn-product [product]="prod"  (priceChange)="onPriceChange($event)"></stn-product>
-    </div>
+    </mat-card>
 }
