--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,8 @@
     <span> Stones </span>
 </mat-toolbar>
 <span> Heute ist {{heute | date: "fullDate" | uppercase}}</span>
-@for(prod of products | slice:0:3; track prod.id; let isEven = $even){
+<stn-product-form (saveProduct)="onSaveProduct($event)"></stn-product-form>
+@for(prod of products; track prod.id; let isEven = $even){
     <mat-card  [ngClass]="{'even-style': isEven}">
         <stn-product [product]="prod"  (priceChange)="onPriceChange($event)"></stn-product>
     </mat-card>
