--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,7 @@
 <mat-toolbar>
     <span> Stones </span>
+        <a [routerLink]="['/products']"> Produktliste</a>
+        <a [routerLink]="['/products/new']"> Neues Produkt</a>
 </mat-toolbar>
 <span> Heute ist {{heute | date: "fullDate" | uppercase}}</span>
-<stn-product-form (saveProduct)="onSaveProduct($event)"></stn-product-form>
-@for(prod of products; track prod.id; let isEven = $even){
-    <mat-card  [ngClass]="{'even-style': isEven}">
-        <stn-product [product]="prod"  (priceChange)="onPriceChange($event)"></stn-product>
-    </mat-card>
-}
+<router-outlet />
