--- a/src/app/product/product-list/product-list.html
+++ b/src/app/product/product-list/product-list.html
@@ -1,5 +1,6 @@
 @for(prod of products | slice:0:3; track prod.id; let isEven = $even;){
     <mat-card [ngClass]="{'even-style':isEven}">
-         <stn-product [product]="prod"/>
+         <stn-product [product]="prod"  (priceChange)="onPriceChange($event)"/>
+         <button mat-raised-button [routerLink]="['/products/new', prod.id]">Produkt ändern</button> 
     </mat-card>
  }
