--- a/src/app/product/product-form/product-form.html
+++ b/src/app/product/product-form/product-form.html
@@ -1,3 +1,8 @@
+<br>
+<strong>Id des aktuellen Produktes: </strong> {{id}} <br>
+<strong>Name Rückwärts: </strong>  {{nameReversed}} <br>
+<strong>Name Länge: </strong>  {{ nameLength }} 
+
 <form [formGroup]="productForm">
     <mat-form-field>
       <mat-label>Name</mat-label>
@@ -38,4 +43,3 @@
        Speichern
     </button>
   </form>
-  <br>{{id}}
